--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "all"
+  "printWidth": 80,
+  "arrowParens": "always",
+  "bracketSpacing": true
 }
